fix(xod-client): prevent sidebar contents from overflowing sidebar title when expanding

--- a/packages/xod-client/src/core/styles/components/Sidebar.scss
+++ b/packages/xod-client/src/core/styles/components/Sidebar.scss
@@ -28,6 +28,7 @@
 
 .Sidebar-title {
   display: flex;
+  flex-shrink: 0;
   height: 28px;
   margin: 0;
   background: $sidebar-color-bg;
